fix Double scroll bar present on Step 1: Repo List

--- a/client/assets/styles/scss/modals/modals-getting-started.scss
+++ b/client/assets/styles/scss/modals/modals-getting-started.scss
@@ -22,8 +22,7 @@
   .list {
     max-height: 80vh;
     min-height: 180px;
-    overflow-x: hidden;
-    overflow-y: auto;
+    overflow: hidden;
   }
 
   .list-item {
